// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent api generates valid keymaps 1`] = `
Object {
  "Key": Object {
    "agent_id": Object {
      "S": "xxxx",
    },
  },
}
`;

exports[`agent api generates valid keymaps 2`] = `
Object {
  "Item": Object {
    "agent_id": Object {
      "S": "xxxx",
    },
    "contactId": "yyyy",
  },
}
`;

exports[`agent api sets agent state 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "hash": "agent_id",
        "name": "connect-agents-table",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "putItem": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "Item": Object {
                  "agent_id": Object {
                    "S": "xxxx",
                  },
                  "current_contact_id": Object {
                    "S": "123abc",
                  },
                  "entered_timestamp": Object {
                    "S": "2020-04-15T05:08:45.222Z",
                  },
                  "last_contact_id": Object {
                    "S": "abc123",
                  },
                  "state": Object {
                    "S": "routable",
                  },
                },
              },
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Object {
                "promise": [MockFunction] {
                  "calls": Array [
                    Array [],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`agent api sets agent state 2`] = `
Object {
  "calls": Array [
    Array [],
  ],
  "instances": Array [
    Object {
      "promise": [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
  ],
  "invocationCallOrder": Array [
    3,
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`outbound api creates callback 1`] = `
Object {
  "config": Object {
    "data": "{\\"dnis1\\":\\"+10000000000\\",\\"call_type\\":\\"callback\\",\\"language\\":5,\\"incident_id\\":[\\"199\\"],\\"external_id\\":\\"123abc\\",\\"external_platform\\":\\"connect\\"}",
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
    },
    "maxContentLength": -1,
    "method": "post",
    "timeout": 0,
    "transformRequest": Array [
      [Function],
    ],
    "transformResponse": Array [
      [Function],
    ],
    "url": "/phone_outbound",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": undefined,
  "headers": undefined,
  "request": Object {
    "responseUrl": "/phone_outbound",
  },
  "status": 201,
}
`;

exports[`outbound api resolves cases by number 1`] = `
Object {
  "ids": Array [
    0,
    1,
    3,
  ],
  "pdas": Array [
    1,
  ],
  "worksites": Array [
    1,
  ],
}
`;

exports[`outbound api retrieves outbound by number 1`] = `
Array [
  Object {
    "external_id": "123abc",
    "external_platform": "connect",
    "id": 0,
    "pda": null,
    "phone_number": "+1234567890",
    "worksite": null,
  },
]
`;

exports[`outbound api unlocks the latest callback 1`] = `
Object {
  "config": Object {
    "data": undefined,
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/x-www-form-urlencoded",
    },
    "maxContentLength": -1,
    "method": "post",
    "timeout": 0,
    "transformRequest": Array [
      [Function],
    ],
    "transformResponse": Array [
      [Function],
    ],
    "url": "/phone_outbound/99/unlock",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": undefined,
  "headers": undefined,
  "request": Object {
    "responseUrl": "/phone_outbound/99/unlock",
  },
  "status": 200,
}
`;
